# AoC-2022

./: new_day.sh  pyproject.toml
day1/: solution.py
day2/: solution.py
day3/: solution.py
day4/: solution.py  test_solution.py
day5/: solution.py  test_solution.py
day6/: solution.py  test_solution.py
day7/: solution.py  test_solution.py
day8/: solution.py  test_solution.py
day9/: solution.py  test_solution.py
template/: solution.py
